fixing input validations for fuel form and fixing formatting

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -172,6 +172,7 @@ button {
   background-color: rgba(8, 8, 8, 0.1);
   color: white;
   font-size: 18px;
+
 }
 
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
@@ -207,11 +208,10 @@ button {
   margin-bottom: 0px;
 }
 
-.form-control {
-  width: 300px;
+.contact .errorMsg {
+  color: rgb(182, 59, 59);
+  font-size: 16px;
+  margin-left: 60px;
   margin-top: 0px;
   margin-bottom: 0px;
 }
-
-
-
