--- a/client/src/App.css
+++ b/client/src/App.css
@@ -172,7 +172,7 @@ button {
   background-color: rgba(8, 8, 8, 0.1);
   color: white;
   font-size: 18px;
-
+  width: 300px;
 }
 
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
