--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,10 @@ button {
   cursor: pointer;
 }
 
+button:hover{
+  background: #85b2f5;
+}
+
 .login {
   width: 100%;
   min-height: 100vh;
@@ -101,6 +105,10 @@ button {
   transition: all 400ms ease-in-out;
 }
 
+.login .loginContainer .btnContainer p span:hover {
+  color: #85b2f5;
+}
+
 .login .loginContainer .errorMsg {
   color: rgb(182, 59, 59);
   font-size: 16px;
@@ -135,6 +143,11 @@ button {
   padding: 8px 0;
   background: #072361;
 }
+
+.hero nav button:hover{
+  background: #85b2f5;
+}
+
 
 .hero div.jumbotron-fluid{
   height: 2px;
@@ -188,30 +201,6 @@ button {
 .contact .contactContainer .errorMsg {
   color: rgb(182, 59, 59);
   font-size: 16px;
-  margin-left: 60px;
-  margin-top: 0px;
-  margin-bottom: 0px;
 }
-
-.input-group-prepend {
-  width: 50px;
-  margin-left: 10px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.input-group-text {
-  width: 40px;
-  margin-left: 10px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.form-control {
-  width: 300px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
 
 
